--- a/_sass/layout/_footer.scss
+++ b/_sass/layout/_footer.scss
@@ -9,9 +9,8 @@
   &__body {
     display: flex;
     flex-direction: row;
-    padding: 5px 0;
+    padding: 5px 20px;
     text-align: center;
-    width: var(--main-width);
     margin: auto;
   }
   
