--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,7 +11,8 @@ layout: default
         <hr>
       </div>
       <div class="l-page__body">
-        {{ content }}
+        <div class="l-content">{{ content }}</div>
+        <div class="l-dynamic"></div>
       </div>
       <div class="l-page__footer">
       </div>
