--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -7,10 +7,8 @@
 @import "layout/footer";
 @import "layout/main";
 
-@import "objects/type";
-
 @import "components/tab";
-@import "components/breadcrumb";
+//@import "components/breadcrumb";
 
 html {
   overflow-y: scroll;
