--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,1 +1,7 @@
 ﻿$layout-border-color: #ddd;
+
+$main-background-color: #fff;
+$side-background-color: #fafafa;
+
+//$main-background-color: #fafafa;
+//$side-background-color: #fff;
