--- a/resources/akdata.css
+++ b/resources/akdata.css
@@ -1,16 +1,5 @@
-.o-badge {
-    display: inline-block;
-    /*float: left;*/
-    width: 80px;
-    padding: 3px 0;
-    margin: 3px;
-    border-radius: 3px;
-    text-align: center;
-}
-
 .o-badge--item {
     width: 120px;
-    font-size: small;
 }
 
 .o-badge--count {
@@ -18,27 +7,31 @@
     text-align: left;
 }
 
+.o-badge--char {
+    width: 80px;
+}
+
 .o-badge--rarity-5 {
-    background-color: rgb(161,72,5);
-    color: rgb(250,195,95);
+    --badge-light: rgb(161,72,5);
+    --badge-color: rgb(250,195,95);
 }
 .o-badge--rarity-4 {
-    background-color: rgb(250,198,2);
-    color: rgb(46,41,5);
+    --badge-light: rgb(250,198,2);
+    --badge-color: rgb(46,41,5);
 }
 .o-badge--rarity-3 {
-    background-color: rgb(214,197,214);
-    color: rgb(46,33,63);
+    --badge-light: rgb(214,197,214);
+    --badge-color: rgb(46,33,63);
 }
 .o-badge--rarity-2 {
-    background-color: rgb(0,179,252);
-    color: black;
+    --badge-light: rgb(0,179,252);
+    --badge-color: black;
 }
 .o-badge--rarity-1 {
-    background-color: rgb(220,229,55);
-    color: black;
+    --badge-light: rgb(220,229,55);
+    --badge-color: black;
 }
 .o-badge--rarity-0 {
-    background-color: rgb(160,160,160);
-    color: black;
+    --badge-light: rgb(160,160,160);
+    --badge-color: black;
 }
