--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,3 @@
-{%- if page.collection == "games" -%}
-  {%- assign gameKey = page.url | split: "/" | shift | first -%}
-  {%- assign gameHome = "/" | append: gameKey | append: "/" -%}
-{%- endif -%}
 {%- if page.withcss == true -%}
   {%- assign cssname = page.url | split: "/" | last | append: '.css' -%}
 {%- elsif page.withcss -%}
@@ -30,21 +26,27 @@
             <div class="l-navbar__button"><i class="far fa-edit"></i></div>
             <div class="c-navmenu c-navmenu--right">
               <div class="c-navmenu__item">
-                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path }}">
-                  <i class="fas fa-edit"></i> {{ page.path | split: '/' | last }}
+                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path }}" target="_BLANK">
+                  <i class="fas fa-edit"></i> {{ page.path | split: '/' | last }} <small>({{page.date | date: "%Y-%m-%d %H:%M"}})</small>
                 </a>
               </div>
 {%- if jsname -%}
+  {%- assign filename = jsname | prepend: '/' | prepend: page.collection | prepend: '_' -%}
+  {%- assign collection = site.collections | where:'label', page.collection | first -%}
+  {%- assign file = collection.files | where:'path', filename | first -%}
               <div class="c-navmenu__item">
-                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path | split: '/' | reverse | slice: -1, 100 | reverse | join: '/' }}/{{jsname}}">
-                  <i class="fas fa-edit"></i> {{jsname}}
+                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path | split: '/' | reverse | slice: -1, 100 | reverse | join: '/' }}/{{jsname}}" target="_BLANK">
+                  <i class="fas fa-edit"></i> {{jsname}} <small>({{file.modified_time | date: "%Y-%m-%d %H:%M"}})</small>
                 </a>
               </div>
 {%- endif -%}
 {%- if cssname -%}
+  {%- assign filename = cssname | prepend: '/' | prepend: page.collection | prepend: '_' -%}
+  {%- assign collection = site.collections | where:'label', page.collection | first -%}
+  {%- assign file = collection.files | where:'path', filename | first -%}
               <div class="c-navmenu__item">
-                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path | split: '/' | reverse | slice: -1, 100 | reverse | join: '/' }}/{{cssname}}">
-                  <i class="fas fa-edit"></i> {{cssname}}
+                <a href="{{ site.github.repository_url }}/tree/master/{{ page.relative_path | split: '/' | reverse | slice: -1, 100 | reverse | join: '/' }}/{{cssname}}" target="_BLANK">
+                  <i class="fas fa-edit"></i> {{cssname}} <small>({{file.modified_time | date: "%Y-%m-%d %H:%M"}})</small>
                 </a>
               </div>
 {%- endif -%}
