--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
     <div class="l-page">
       <div class="l-page__header">
         <h1 class="l-page__title">
-          <a href="{{page.url}}">{{ page.title}}</a>
+          <a href="{{page.url | relative_url }}">{{ page.title}}</a>
         </h1>
         <hr>
       </div>
