--- a/_sass/layout/_main.scss
+++ b/_sass/layout/_main.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-grow: 1;
+  background-color: $main-background-color;
   &__body {
     flex: 1;
     display: flex;
@@ -20,7 +21,6 @@
   flex-direction: column;
   //padding-top: 20px;
   width: 100%;
-  background-color: #fff;
   background-clip: border-box;
   //border: 1px solid rgba(0,0,0,.125);
   border-radius: .25rem;
@@ -34,30 +34,6 @@
   }
 }
 
-
-.l-page {
-  a {
-    color: #007bff;
-    &:hover {
-      color: #007bff;
-      text-decoration: underline;
-    }
-  }
-  
-  h3{
-    font-size: 1.4em;
-    margin-top:1em;
-    
-    &:after {
-      content: "";
-      display: block;
-      height: 2px;
-      margin-top:4px;
-      background: linear-gradient(to right, rgb(120, 120, 240), transparent);
-    }
-  }
-  
-}
 
 
 .l-layout--home {
