--- a/_docs/levels.css
+++ b/_docs/levels.css
@@ -55,10 +55,6 @@
 }
 
 
-.p-map__tile {
-    //border-color: gray;
-}
-
 .p-map__tile--forbidden {
     background-color: #404040;
 }
@@ -69,8 +65,6 @@
 }
 
 .p-map__tile--flystart {
-    //border-color: #f99;
-    //color: #f99;
     border-color: #f00;
     border-style: dashed;
     color: #f00;
@@ -87,9 +81,14 @@
     background-color: white;
 }
 
-.p-map__tile--floor {
-    //border: 2px dotted #aa0;
-}
+.p-map:hover .p-map__tile--forbidden { color: #606060; }
+.p-map:hover .p-map__tile--height-0 { color: #c0c0c0; }
+.p-map:hover .p-map__tile--height-1 { color: #606060; }
+.p-map:hover .p-map__tile--start { color: #f00; }
+.p-map:hover .p-map__tile--flystart { color: #f00; }
+.p-map:hover .p-map__tile--end { color: #00f; }
+
+
 
 .p-map__tile--corrosion {
     box-shadow: inset 0 0 3px gold;
