--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -2,6 +2,10 @@
   flex: 0 0 300px;
   background: $side-background-color;
   box-shadow: inset -1px 0 0 $layout-border-color;
+
+  @media only screen and (max-width: $break-large) {
+    display: none;
+  }
 }
 
 .l-sidebar {
