March 4 minor refine

--- a/_includes/baidu-analytics.html
+++ b/_includes/baidu-analytics.html
@@ -9,7 +9,7 @@
       "https://cdn.jsdelivr.net/npm/c3@0.7.15/c3.min.js",
     ];
     var styles = [
-      "https://cdn.bootcss.com/c3/0.7.15/c3.min.css"
+      "/akdata/assets/css/c3.css"
     ]
     var s = document.getElementsByTagName('HEAD').item(0);
     scripts.forEach(x => {
