--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -43,11 +43,11 @@
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
-    
+    font-size: 1.2rem;
   }
 
   &__item--level-0 {
-    font-size: small;
+    font-size: 1em;
     color: #666;
     padding: 1em 0.5em 0.5em 1em;
   }
