June 24 improve ui

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,15 @@
 <footer class="l-layout__footer l-footer">
   <div class="l-footer__body">
     <div class="l-footer__logo">
-      <a href="{{ "/" | relative_url }}">{{- site.title | escape -}}</a>
-      <span>© 2018 </span>
+      <a target="_blank" href="https://github.com/xulai1001/akdata">{{- site.title | escape -}}</a>
+      <span>© 2020 &nbsp;&nbsp;&nbsp; </span>
+      <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordCode=42011102003942" >
+        <img src="http://www.beian.gov.cn/img/ghs.png"/>
+        <span style="color:#939393;">鄂公网安备 42011102003942号</span>
+      </a>
     </div>
     <div class="l-footer__list">
       {{page.footer}}
-    </div>
-    <div class="js-marker">
-      <span class="js-marker__icon js-marker__icon--js" title="JavaScript"></span>
-      <span class="js-marker__icon js-marker__icon--es6" title="ES6"></span>
-      <span class="js-marker__icon js-marker__icon--module" title="Module"></span>
-      <span class="js-marker__icon js-marker__icon--loader" title="Loader"></span>
-      <span class="js-marker__icon js-marker__icon--extra" title="Extra"></span>
     </div>
   </div>
 </footer>
