--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,6 +28,8 @@
     document.documentElement.className += ' js-module';
   </script>
 
+  <link rel="shortcut icon" href="/akdata/favicon.ico">
+
   {%- include baidu-analytics.html -%}
 
 {%- for url in site.data.config.css -%}
