June 25 add whatsnew.md

--- a/resources/akdata.css
+++ b/resources/akdata.css
@@ -35,3 +35,8 @@
     --badge-light: rgb(160,160,160);
     --badge-color: black;
 }
+/*
+.l-layout__sidebar {
+    background-color: rgb(240, 240, 240);
+}
+*/
