--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,7 +31,6 @@
   <link rel="shortcut icon" href="/akdata/favicon.ico">
 
   {%- include baidu-analytics.html -%}
-
 {%- for url in site.data.config.css -%}
   {% if url contains "://" %}
     {% assign disturl = url %}
@@ -89,7 +88,7 @@
       name: "{{page.name}}",
       collection: "{{page.collection}}",
       category: "{{page.category}}",
-      dir: "{{page.dir}}",
+      dir: "{{page.dir}}"
     };
   </script>
 {{site.tags.TAG}}
