--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,9 +2,10 @@
   <div class="l-footer__body">
     <div class="l-footer__logo">
       <a target="_blank" href="https://github.com/xulai1001/akdata">{{- site.title | escape -}}</a>
-      <span>© 2020 &nbsp;&nbsp;&nbsp; </span>
-      <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordCode=42011102003942" >
-        <img src="http://www.beian.gov.cn/img/ghs.png"/>
+      <span>© 2020 - 2021 &nbsp;&nbsp; 备案号:
+        <a href="https://beian.miit.gov.cn" target="_blank">鄂ICP备20009147号-1</a></span>
+      <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=42011102003942" >
+        <img src="https://viktorlab.cn/ghs.png"/>
         <span style="color:#939393;">鄂公网安备 42011102003942号</span>
       </a>
     </div>
