--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,4 +1,4 @@
-{%- assign categories = site[page.collection] | map: 'category' | uniq -%}
+{%- assign categories = '计算器|干员与关卡|游戏数据速查|其他功能' | split: '|' -%}
 
 <div class="l-layout__sidebar">
   <ul class="l-sidebar">
