--- a/resources/akdata.css
+++ b/resources/akdata.css
@@ -78,4 +78,9 @@ strong {
     /*    box-shadow: 3px 3px 7px -1px rgb(0 0 0 / 85%); */
         border-radius: 5px;
 }
+.figure :hover{
+
+    background:#f1f1f1;
+    box-shadow:2px 2px 4px #777;
+}
     
