--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Cache-Control" content="max-age=604800">
-
+  <meta name="referrer" content="strict-origin-when-cross-origin">
   <title>
 {%- if page.layout == 'home' -%}
   {{site.title}}
