--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
   <div class="l-header__body">
     <div class="l-header__logo">
       <a href="{{ gameHome | default: "/" | relative_url }}">
-          <div style="width:30%; float:left"><img src="https://cdn.jsdelivr.net/gh/xulai1001/akdata/penguin.gif" alt="{{ site.logo }}"></div>
+          <div style="width:30%; float:left"><img src="/akdata/penguin.gif" alt="{{ site.logo }}"></div>
           <div style="width:70%; float:left;"><img src="/akdata/logo.png" style="width:100%; margin-top: 5px;"></div>
   		</a>
     </div>
