--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
       <span>© 2020 - 2021 &nbsp;&nbsp; 备案号:
         <a href="https://beian.miit.gov.cn" target="_blank">鄂ICP备20009147号-1</a></span>
       <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=42011102003942" >
-        <img src="https://viktorlab.cn/ghs.png"/>
+        <img src="/akdata/ghs.png"/>
         <span style="color:#939393;">鄂公网安备 42011102003942号</span>
       </a>
     </div>
