--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -26,6 +26,12 @@
 
     img {
       max-height: 60px;
+      &:first-child {
+        max-width: calc((100vw - 104px) * 106 / 407);
+      }
+      &:last-child {
+        max-width: calc((100vw - 104px) * 300 / 407);
+      }
     }
   }
 
