fix cdn, logo issue and agoat2 mastery issue

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
   <div class="l-header__body">
     <div class="l-header__logo">
       <a class="d-flex" href="{{ gameHome | default: "/" | relative_url }}">
-          <img src="/akdata/penguin.gif" alt="{{ site.logo }}">
+          <img src="https://akdata-site.oss-cn-guangzhou.aliyuncs.com/penguin.gif" alt="{{ site.logo }}">
           <img src="/akdata/logo.jpg">
         </a>
     </div>
